# localapi

./: .gitignore  pyproject.toml
app/: data.py  get.py  input_box.py  main.py  myglobal.py
