[project]
name = "localapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "certifi>=2026.2.25",
    "readchar>=4.2.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
]

[tool.setuptools]
packages = ["app"]

[project.scripts]
localapi = "app.main:main"
